--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,79 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
+
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  font-family: 'Montserrat', sans-serif;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+nav {
+  background-color: #3c3c3c;
+  padding: 50px 0;
+  display: flex;
+  justify-content: center;
+  position: relative;
+}
+
+nav ul {
+  display: flex;
+  width: 500px;
+  justify-content: space-between;
+}
+
+ul {
+  margin-bottom: 0;
+  padding-left: 0;
+}
+
+ul li {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  color: #fff;
+  font-size: 25px;
+}
+
+button {
+  background-color: transparent;
+  border: none;
+  outline: none;
+  box-shadow: none;
+  color: #fff;
+  cursor: pointer;
+  display: none;
+}
+
+button svg {
+  width: 40px !important;
+  height: 40px !important;
+}
+
+@media (max-width: 1200px) {
+  nav ul {
+    display: none;
+  }
+
+  button {
+    display: block;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+nav ul.open {
   display: flex;
   flex-direction: column;
+  position: absolute;
+  top: 100%;
+  background: #3c3c3c;
+  width: 100%;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  border-top: 1px solid #fff;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+nav ul.open li {
+  padding: 10px 0;
 }
